<resources>
    <string name="app_name">BIRTHDAY MESSAGE APP</string>
    <string name="regContact">Register contact</string>
    <string name="showContacts">Show contacts</string>
    <string name="settings">SETTINGS</string>
    <string name="message">MESSAGE</string>
    <string name="contact">REGISTER CONTACT</string>
    <string name="contacts">CONTACTS</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="phone">Phone-nr</string>
    <string name="birthday">Date of birth</string>
    <string name="birtdayMessage">HAPPY BIRTHDAY!</string>
    <string name="submit">Submit changes</string>
    <string name="delete">Delete contact</string>
    <string name="exit">EXIT</string>
    <string name="ret">RETURN</string>
    <string name="deletePerson">You are about to delete this contact. Are you sure?</string>
    <string name="updatePerson">You are about to change the info for this contact. Are you sure?</string>
    <string name="warning">WARNING</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="confirm">Confirm message</string>
    <string name="TimeAndMessage">Time and message confirmed</string>
    <string name="messageLabel">MESSAGE</string>
    <string name="timeLabel">TIME TO SEND MESSAGE</string>
    <string name="checkBoxText">SERVICE ON/OFF</string>
    <string name="search">Search contacts..</string>
    <string name="returns">Return</string>
    <string name="nrValidate">You need to type in an eight digit number as your phone-nr</string>
    <string name="nameValidate">Not a valid name..</string>
    <string name="exitContact">Are you sure you want to dismiss creating your contact?</string>
    <string name="contactAdded">Success! Contact added</string>
    <string name="contactInfo">CONTACT INFO</string>
    <string name="langText">PLEASE SELECT DESIRED LANGUAGE</string>

</resources>
