<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#19485E"
    tools:context="com.example.ssandoy.s236305_mappe2.ChangeActivity"
    android:clickable="false">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/FirstNameET"
        android:textColor="#42C0FB"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/textView2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/LastNameET"
        android:layout_below="@+id/FirstNameET"
        android:layout_alignStart="@+id/FirstNameET"
        android:textColor="#42C0FB" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/phoneNrET"
        android:layout_below="@+id/LastNameET"
        android:layout_alignStart="@+id/LastNameET"
        android:textColor="#42C0FB" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/saveButton"
        android:background="@null"
        android:textSize="20dp"
        android:textColor="#42C0FB"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/phoneLabel"
        android:layout_marginBottom="30dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:id="@+id/deleteButton"
        android:background="@null"
        android:textSize="20dp"
        android:textColor="#42C0FB"
        android:layout_below="@+id/submitIcon"
        android:layout_toEndOf="@+id/submitIcon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/contactInfo"
        android:id="@+id/textView"
        android:textColor="#42C0FB"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/FirstNameET"
        android:textSize="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/birthday"
        android:id="@+id/textView2"
        android:layout_below="@+id/phoneNrET"
        android:layout_marginTop="5dp"
        android:textColor="#42C0FB"
        android:layout_alignParentRight="false"
        android:layout_alignParentBottom="false"
        android:layout_alignParentTop="false"
        android:layout_marginLeft="100dp"
        android:textSize="15dp" />

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="160dp"
        android:id="@+id/birthDatePicker"
        android:calendarViewShown="false"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:clickable="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/phone"
        android:id="@+id/phoneLabel"
        android:autoText="false"
        android:layout_alignBottom="@+id/phoneNrET"
        android:layout_alignParentStart="true"
        android:textColor="#42C0FB" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/firstname"
        android:id="@+id/firstNameLabel"
        android:layout_alignParentStart="true"
        android:textColor="#42C0FB"
        android:layout_above="@+id/LastNameET" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lastname"
        android:id="@+id/lastNameLabel"
        android:layout_above="@+id/phoneNrET"
        android:layout_alignParentStart="true"
        android:textColor="#42C0FB" />

    <Button
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/submitIcon"
        android:background="@drawable/greenicon"
        android:layout_alignBaseline="@+id/saveButton"
        android:layout_alignBottom="@+id/saveButton"
        android:layout_toStartOf="@+id/saveButton"
        android:layout_marginRight="13dp" />

    <Button
        android:layout_width="19dp"
        android:layout_height="19dp"
        android:id="@+id/deleteIcon"
        android:background="@drawable/redicon"
        android:layout_alignBaseline="@+id/deleteButton"
        android:layout_alignBottom="@+id/deleteButton"
        android:layout_toStartOf="@+id/saveButton"
        android:layout_marginRight="20dp" /> <!-- TODO: STYLE BUTTON !-->

</RelativeLayout>
