<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ssandoy.s236305_mappe2.MessageActivity"
    android:background="#19485E">

    <EditText
        android:id="@+id/messageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLength="2000"
        android:maxLines="3"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/messageLabel"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/messageLabel"
        android:id="@+id/messageLabel"
        android:textSize="22dp"
        android:textColor="#42C0FB"
        android:layout_below="@+id/timePicker"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/timeLabel"
        android:id="@+id/timeLabel"
        android:textSize="20dp"
        android:textColor="#98deff"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBoxText"
        android:id="@+id/OnOffCheckBox"
        android:textColor="#42C0FB"
        android:textSize="20dp"
        android:layout_below="@+id/confirmButton"
        android:layout_alignStart="@+id/confirmIcon" />

    <TimePicker
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:id="@+id/timePicker"
        android:layout_marginLeft="75dp"
        android:layout_below="@+id/timeLabel"
        android:layout_alignStart="@+id/timePicker"
        />

    <Button
        android:layout_width="35dp"
        android:layout_height="30dp"
        android:id="@+id/button3"
        android:background="@drawable/messageicon"
        android:layout_alignTop="@+id/messageLabel"
        android:layout_toStartOf="@+id/messageLabel" />

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/button4"
        android:background="@drawable/hourglassicon"
        android:layout_marginBottom="80dp"
        android:layout_alignBottom="@+id/timePicker"
        android:layout_toStartOf="@+id/OnOffCheckBox" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:id="@+id/confirmButton"
        android:textColor="#42C0FB"
        android:background="@null"
        android:textSize="20dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/messageText" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/confirmIcon"
        android:background="@drawable/greenicon"
        android:layout_above="@+id/OnOffCheckBox"
        android:layout_toStartOf="@+id/button3"
        android:layout_marginBottom="10dp" />

</RelativeLayout>
