<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#19485E"
    tools:context="com.example.ssandoy.s236305_mappe2.DisplayActivity"
    android:clickable="false">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/FirstNameTV"
        android:textColor="#42C0FB"
        android:textSize="23dp"
        android:layout_below="@+id/button8"
        android:layout_alignStart="@+id/LastNameTV"
        android:layout_alignLeft="@+id/firstNameLabel"
        android:layout_marginTop="50dp"
        android:textAlignment="textEnd" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/LastNameTV"
        android:textColor="#42C0FB"
        android:textSize="23dp"
        android:layout_below="@+id/FirstNameTV"
        android:layout_toEndOf="@+id/textView2"
        android:textAlignment="textEnd"
        android:text="12345678" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/phoneNrTV"
        android:textColor="#42C0FB"
        android:layout_below="@+id/LastNameTV"
        android:layout_alignStart="@+id/LastNameTV"
        android:textSize="23dp"
        android:textAlignment="textEnd"
        android:text="12345678" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/contactInfo"
        android:id="@+id/textView"
        android:textColor="#42C0FB"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/phoneLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/birthday"
        android:id="@+id/textView2"
        android:textColor="#42C0FB"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/phoneLabel"
        android:layout_marginTop="8dp"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/phone"
        android:id="@+id/phoneLabel"
        android:autoText="false"
        android:textColor="#42C0FB"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/phoneNrTV"
        android:textSize="20dp"
        android:layout_marginTop="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/firstname"
        android:id="@+id/firstNameLabel"
        android:textColor="#42C0FB"
        android:layout_alignTop="@+id/FirstNameTV"
        android:layout_alignParentStart="true"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lastname"
        android:id="@+id/lastNameLabel"
        android:textColor="#42C0FB"
        android:layout_below="@+id/firstNameLabel"
        android:layout_alignParentStart="true"
        android:textSize="20dp"
        android:layout_marginTop="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/birtdayView"
        android:text="01.01.2301"
        android:textSize="23dp"
        android:textColor="#42C0FB"
        android:layout_alignBottom="@+id/textView2"
        android:textAlignment="textEnd"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/button7"
        android:background="@drawable/birthdayicon"
        android:layout_alignTop="@+id/birtdayView"
        android:layout_toStartOf="@+id/birtdayView" />

    <Button
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:id="@+id/button8"
        android:background="@drawable/contacticon"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:id="@+id/button9"
        android:background="@drawable/phoneicon"
        android:layout_alignTop="@+id/phoneNrTV"
        android:layout_alignEnd="@+id/textView"
        android:layout_marginRight="55dp"
        android:layout_marginTop="4dp" />


</RelativeLayout>
